--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="background-color-Sobre">
         <div class="main-sobre">
-            <img src="">
+            <img src="emizzitita.jpg">
             <div class="Text-sobre">
                 <h2>Sobre-Mim</h2>
                 <h5>Desenvolvedor <span>& designer</span></h5>
