--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="background">
         <nav>
-            <h2 class="logo">Portfo<span>lio</span></h2><!--Logo-->
+            <h2 class="logo">thae<span>milly</span></h2><!--Logo-->
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre mim</a></li>
@@ -48,8 +48,9 @@
             <div class="Text-sobre">
                 <h2>Sobre-Mim</h2>
                 <h5>Desenvolvedor <span>& designer</span></h5>
-                <p>Eu sou um Desenvolvedor web front-end. Eu posso fornecer codigos limpos e imagem de desing perfeito. E também fazer o website mais & mais interativo e com animação web. E posso Deixar seu site responsivo, e que ele acesse todos os usuarios, independente dos seus aparelhos dispositivos.</p>
-                <button type="button">Vamos conversa</button><!--Button-->
+                <p>meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
+                </p>
+                <button type="button">Vamos conversar</button><!--Button-->
             </div><!--Text-sobre-->
         </div><!--main-sobre-->
     </section><!--background-color-Sobre-->
@@ -60,7 +61,35 @@
         <div class="title">
             <h2>Nossos Serviços</h2>
         </div><!--title-->
+        <div class="Caixa">
+            <div class="Card">
+                <i class="fas fa-bars"></i>
+                <h5>Desenvolvedor web</h5>
+                <div class="Paragrafo-button">
+                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <button type="button">Ler Mais</button><!--button-->
+                </div><!--Paragrafo-button-->
+            </div><!--Card-->
 
+            <div class="Card">
+                <i class="fas fa-user"></i>
+                <h5>Desenvolvedor web</h5>
+                <div class="Paragrafo-button">
+                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <button type="button">Ler Mais</button><!--button-->
+                </div><!--Paragrafo-button-->
+            </div><!--Card-->
+
+            <div class="Card">
+                <i class="fas fa-bell"></i>
+                <h5>Desenvolvedor web</h5>
+                <div class="Paragrafo-button">
+                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <button type="button">Ler Mais</button><!--button-->
+                </div><!--Paragrafo-button-->
+            </div><!--Card-->
+        </div><!--Caixa-->
+    </div><!--Conatiner-serviços-->
 
     <!--Contatos-->
     <div class="me-contate">
