--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="Container-serviços">
         <div class="title">
-            <h2>Nossos Serviços</h2>
+            <h2>Projetos</h2>
         </div><!--title-->
         <div class="Caixa">
             <div class="Card">
@@ -73,12 +73,15 @@
 
             <div class="Card">
                 <i class="fas fa-user"></i>
-                <h5>Desenvolvedor web</h5>
+                <h5>Sistema solar</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
-                    <button type="button">Ler Mais</button><!--button-->
+                    <p>este projeto é sobre o sistema solar</p>
+                    <a href="sistemasolar.html">
+                        <button type="button">Ler Mais</button><!--button-->
+                    </a>
                 </div><!--Paragrafo-button-->
             </div><!--Card-->
+            
 
             <div class="Card">
                 <i class="fas fa-bell"></i>
