--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio website</title>
 </head>
 <body>
@@ -63,6 +64,18 @@
         </div><!--title-->
         <div class="Caixa">
             <div class="Card">
+                <i class="fa-solid fa-sun"></i>
+                <h5>Sistema solar</h5>
+                <div class="Paragrafo-button">
+                    <p>Este projeto é sobre o sistema solar</p>
+                    <a href="sistemasolar.html">
+                        <button type="button">Veja mais</button><!--button-->
+                    </a>
+                </div><!--Paragrafo-button-->
+            </div><!--Card-->
+
+
+            <div class="Card">
                 <i class="fas fa-bars"></i>
                 <h5>Desenvolvedor web</h5>
                 <div class="Paragrafo-button">
@@ -71,16 +84,6 @@
                 </div><!--Paragrafo-button-->
             </div><!--Card-->
 
-            <div class="Card">
-                <i class="fas fa-user"></i>
-                <h5>Sistema solar</h5>
-                <div class="Paragrafo-button">
-                    <p>este projeto é sobre o sistema solar</p>
-                    <a href="sistemasolar.html">
-                        <button type="button">Ler Mais</button><!--button-->
-                    </a>
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
             
 
             <div class="Card">
