--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="Text-sobre">
                 <h2>Sobre-Mim</h2>
                 <h5>Desenvolvedor <span>& designer</span></h5>
-                <p>meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
+                <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
                 <button type="button">Vamos conversar</button><!--Button-->
             </div><!--Text-sobre-->
@@ -69,18 +69,20 @@
                 <div class="Paragrafo-button">
                     <p>Este projeto é sobre o sistema solar</p>
                     <a href="sistemasolar.html">
-                        <button type="button">Veja mais</button><!--button-->
+                        <button type="button">Ver mais</button><!--button-->
                     </a>
                 </div><!--Paragrafo-button-->
             </div><!--Card-->
 
 
             <div class="Card">
-                <i class="fas fa-bars"></i>
-                <h5>Desenvolvedor web</h5>
+                <i class="fa-solid fa-film"></i>
+                <h5>Site anime</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
-                    <button type="button">Ler Mais</button><!--button-->
+                    <p>Um site com imagens e videos de anime </p>
+                    <a href="siteanimes.html">
+                        <button type="button">Ver mais</button><!--button-->
+                    </a>
                 </div><!--Paragrafo-button-->
             </div><!--Card-->
 
