--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <title>Portfolio website</title>
 </head>
 <body>
-    <!---Cabeçalho-Main-->
 
     <div class="background">
         <nav>
-            <h2 class="logo">thae<span>milly</span></h2><!--Logo-->
+            <h2 class="logo">thae<span>milly</span></h2>
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre mim</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
-            </ul><!--cabeçalho-link-->
+            </ul>
             <a href="#" class="btn">Subscribe</a>
         </nav>
 
@@ -36,12 +35,9 @@
                     <input type="email" nome="email" id="mail" placeholder="Envie seu Email">
                     <input type="submit" name="submit" value="Começar">
                 </form>
-            </div><!--Container-btn-->
-        </div><!--Main-->
-    </div><!--background-->
-
-
-    <!--Começo-da-seção-sobre-->
+            </div>
+        </div>
+    </div>
 
     <section class="background-color-Sobre">
         <div class="main-sobre">
@@ -51,17 +47,15 @@
                 <h5>Desenvolvedor <span>& designer</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
-                <button type="button">Vamos conversar</button><!--Button-->
-            </div><!--Text-sobre-->
-        </div><!--main-sobre-->
-    </section><!--background-color-Sobre-->
-
-    <!--Começo-da-seção-nossos-serviços-->
+                <button type="button">Vamos conversar</button>
+            </div>
+        </div>
+    </section>
 
     <div class="Container-serviços">
         <div class="title">
             <h2>Projetos</h2>
-        </div><!--title-->
+        </div>
         <div class="Caixa">
             <div class="Card">
                 <i class="fa-solid fa-sun"></i>
@@ -69,10 +63,10 @@
                 <div class="Paragrafo-button">
                     <p>Este projeto é sobre o sistema solar</p>
                     <a href="sistemasolar.html">
-                        <button type="button">Ver mais</button><!--button-->
+                        <button type="button">Ver mais</button>
                     </a>
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
+                </div>
+            </div>
 
 
             <div class="Card">
@@ -81,30 +75,25 @@
                 <div class="Paragrafo-button">
                     <p>Um site com imagens e videos de anime </p>
                     <a href="siteanimes.html">
-                        <button type="button">Ver mais</button><!--button-->
+                        <button type="button">Ver mais</button>
                     </a>
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
+                </div>
+            </div>
 
             
 
             <div class="Card">
-                <i class="fas fa-bell"></i>
-                <h5>Desenvolvedor web</h5>
+                <i class="fa-solid fa-question"></i>
+                <h5>Em desenvolvimento...</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
-                    <button type="button">Ler Mais</button><!--button-->
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
-        </div><!--Caixa-->
-    </div><!--Conatiner-serviços-->
+                    <p>... </p>
+                    <button type="button">Ler Mais</button>
+                </div>
 
-    <!--Contatos-->
     <div class="me-contate">
-        <button type="button">Enviar mensagem</button><!--button-->
-    </div><!--me-contate-->
+        <button type="button">Enviar mensagem</button>
+    </div>
 
-    <!--Rodapé--->
     <footer>
         <div class="Redes-sociais">
             <a href="https://www.facebook.com/thaem1lly"><i class="fab fa-facebook-f"></i></a>
