--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="Main">
             <h4>Ola, meu nome é</h4>
             <h1>Thaemilly<span>Oliveira</span></h1>
-            <h3>Eu sou um desenvolvedor web</h3>
+            <h3>Eu sou uma (nao sei oq sou)</h3>
             <div class="Container-btn">
                 <form>
                     <input type="email" nome="email" id="mail" placeholder="Envie seu Email">
@@ -44,7 +44,7 @@
             <img src="emizzitita.jpg">
             <div class="Text-sobre">
                 <h2>Sobre-Mim</h2>
-                <h5>Desenvolvedor <span>& designer</span></h5>
+                <h5>titulo(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
                 <button type="button">Vamos conversar</button>
