--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre mim</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Projetos</a></li>
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -31,8 +31,8 @@
             <h1>Thaemilly<span>Oliveira</span></h1>
             <h3>Eu sou uma (nao sei oq sou)</h3>
             <div class="Container-btn">
-                <form>
-                    <input type="email" nome="email" id="mail" placeholder="Envie seu Email">
+                <form action="mailto:thaemillytata73365@gmail.com" method="post" enctype="text/plain">
+                    <input type="email" name="email" id="mail" placeholder="Envie seu Email">
                     <input type="submit" name="submit" value="Começar">
                 </form>
             </div>
