--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,6 @@
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
-            <a href="#" class="btn">Subscribe</a>
         </nav>
 
         <div class="Main">
@@ -33,7 +32,7 @@
             <div class="Container-btn">
                 <form action="mailto:thaemillytata73365@gmail.com" method="post" enctype="text/plain">
                     <input type="email" name="email" id="mail" placeholder="Envie seu Email">
-                    <input type="submit" name="submit" value="Começar">
+                    <input type="submit" name="submit" value="Enviar">
                 </form>
             </div>
         </div>
@@ -44,7 +43,7 @@
             <img src="emizzitita.jpg">
             <div class="Text-sobre">
                 <h2>Sobre-Mim</h2>
-                <h5>titulo(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
+                <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
                 <button type="button">Vamos conversar</button>
