--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="Redes-sociais">
                     <a href="https://www.facebook.com/thaem1lly"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.instagram.com/thaemiillly/"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/thaemilly-sousa-oliveira-7816592a2/"></a><i class="fa-brands fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/thaemilly-sousa-oliveira-7816592a2/"></a><i class="fa-brands fa-linkedin-in"></i>
                 </div>
             </footer>
             
