--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2 class="logo">thae<span>milly</span></h2>
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre mim</a></li>
+                <button onclick="location.href='#contato'">Contato</button>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
@@ -42,6 +42,7 @@
         <div class="main-sobre">
             <img src="emizzitita.jpg">
             <div class="Text-sobre">
+                <h2 id="Sobre-Mim">Sobre-Mim</h2>
                 <h2>Sobre-Mim</h2>
                 <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
