--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="background-color-Sobre">
         <div class="main-sobre">
-            <img src="emizzitita.jpg">
+            <img src="emizzitita.jpg"width="320" height="205"/>
             <div class="Text-sobre">
                 <h2 id="Sobre-Mim">Sobre-Mim</h2>
                 <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
