--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
                 <button onclick="location.href='#Sobre-Mim'">Sobre-Mim</button>
-                <li><a href="#">Projetos</a></li>
+                <button onclick="location.href='#Projetos'">Projetos</button>
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -53,7 +53,7 @@
 
     <div class="Container-serviços">
         <div class="title">
-            <h2>Projetos</h2>
+            <h2 id="Projetos">Projetos</h2>
         </div>
         <div class="Caixa">
             <div class="Card">
