--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             </div>
         </div>
     </div>    
+    <h2>Habilidades</h2>
+    <p>python basico</p>
+    <p>java basico</p>
+    <p>html basico</p>
     <div class="me-contate">
         <button type="button">Enviar mensagem</button>
             </div>
