--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <li><a href="#">Inicio</a></li>
                 <button onclick="location.href='#Sobre-Mim'">Sobre-Mim</button>
                 <button onclick="location.href='#Projetos'">Projetos</button>
-                <li><a href="#">Habilidades</a></li>
-                <li><a href="#">Contato</a></li>
+                <button onclick="location.href='#Contato'">Contato</button>
             </ul>
         </nav>
 
@@ -89,13 +88,10 @@
             </div>
         </div>
     </div>    
-    <h2>Habilidades</h2>
-    <p>python basico</p>
-    <p>java basico</p>
-    <p>html basico</p>
+
     <div class="me-contate">
-        <button type="button">Enviar mensagem</button>
-            </div>
+            <button type="button">Enviar mensagem</button>
+                </div>
 
             <footer>
                 <div class="Redes-sociais">
