--- a/siteanimes.html
+++ b/siteanimes.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Minha Página</title>
+    <title>site anime</title>
+    <style>
+        body {
+          background-color: #07062c;
+          font-family: Arial, sans-serif;
+          color: white;
+        }
+    </style>
 </head>
 <body>
     <table>
