--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="Main">
             <h4>Ola, meu nome é</h4>
             <h1>Thaemilly<span>Oliveira</span></h1>
-            <h3>Eu sou uma (nao sei oq sou)</h3>
+            <h3>Eu sou uma (nao sei oq so)</h3>
             <div class="Container-btn">
                 <form action="mailto:thaemillytata73365@gmail.com" method="post" enctype="text/plain">
                     <input type="email" name="email" id="mail" placeholder="Envie seu Email">
