--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
     </div>
 
     <section class="background-color-Sobre">
+        <h2 id="Sobre-Mim">Sobre-Mim</h2>
         <div class="main-sobre">
             <img src="emizzitita.jpg"width="320" height="205"/>
             <div class="Text-sobre">
-                <h2 id="Sobre-Mim">Sobre-Mim</h2>
+                <h2>Sobre-Mim</h2>
                 <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
@@ -89,9 +90,30 @@
         </div>
     </div>    
 
-    <div class="me-contate">
-            <button type="button">Enviar mensagem</button>
-                </div>
+<section id="Contato" class="background-color-Contato">
+    <div class="main-contato">
+        <div class="Text-contato">
+            <h3>Entre em contato comigo</h3>
+            <p>Se você tem alguma pergunta ou deseja discutir um projeto, sinta-se à vontade para entrar em contato comigo.</p>
+            <ul class="lista-contato">
+                <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99999-9999</li>
+            </ul>
+        </div>
+        <div class="Form-contato">
+            <form action="mailto:thaemillytata73365@gmail.com" method="post" enctype="text/plain">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" placeholder="Seu nome completo" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Seu email" required>
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" placeholder="Sua mensagem" rows="4" required></textarea>
+                <input type="submit" value="Enviar Mensagem">
+            </form>
+        </div>
+    </div>
+</section>
+
 
             <footer>
                 <div class="Redes-sociais">
