--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             <ul class="lista-contato">
                 <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
                 <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
             </ul>
         </div>
     </div>
