--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             <ul class="lista-contato">
                 <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
                 <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+
+                
+                <!-- Inicio Parte do Formulario --> 
                 <div class="form">
                     <form action="https://api.staticforms.xyz/submit" method="POST">
                         <input type="hidden" name="accessKey" value="2b4d88e2-d15d-44a9-a567-1f165e2434c0">
@@ -116,6 +119,9 @@
                         <button type="submit" onsubmit class="button">Enviar</button>
                     </form>
                 </div>
+                <!-- Fim Parte do Formulario -->
+
+                
             </ul>
         </div>
     </div>
