--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="Text-sobre">
                 <h2>Sobre-Mim</h2>
                 <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
-                <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
+                <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski.
                 </p>
                 <button type="button">Vamos conversar</button>
             </div>
@@ -102,10 +102,9 @@
                 <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
 
                 
-                <!-- Inicio Parte do Formulario --> 
                 <div class="form">
-                    <form action="https://api.staticforms.xyz/submit" method="POST">
-                        <input type="hidden" name="accessKey" value="2b4d88e2-d15d-44a9-a567-1f165e2434c0">
+                    <form action="emi.000013wx@gmail.com" method="POST">
+                        <input type="hidden" name="accessKey" value="1bec46b5-70d3-445a-9df0-6ce68bbf334d">
                         Nome: <br>
                         <input type="text" name="name" required class="caixas" placeholder="Seu nome..."><br><br>
                         E-mail: <br>
@@ -119,7 +118,6 @@
                         <button type="submit" onsubmit class="button">Enviar</button>
                     </form>
                 </div>
-                <!-- Fim Parte do Formulario -->
 
                 
             </ul>
