--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <section id="Contato" class="background-color-Contato">
     <div class="main-contato">
         <div class="Text-contato">
-            <h3>Entre em contato comigo</h3>
+            <h3>Entre em contato comigoo</h3>
             <p>Se você tem alguma pergunta ou deseja discutir um projeto, sinta-se à vontade para entrar em contato comigo.</p>
             <ul class="lista-contato">
                 <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
