--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
 
     <div class="background">
+        <h2 id="Inicio" style="visibility: hidden;">Inicio</h2>
         <nav>
             <h2 class="logo">thae<span>milly</span></h2>
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
-                <button onclick="location.href='#Sobre-Mim'">Sobre-Mim</button>
+                <button onclick="location.href='#Sobre-Mim'">Sobre-mim</button>
                 <button onclick="location.href='#Projetos'">Projetos</button>
                 <button onclick="location.href='#Contato'">Contato</button>
             </ul>
@@ -27,7 +28,7 @@
         <div class="Main">
             <h4>Ola, meu nome é</h4>
             <h1>Thaemilly<span>Oliveira</span></h1>
-            <h3>Eu sou uma (nao sei oq so)</h3>
+            <h3>Eu sou uma diva</h3>
             <div class="Container-btn">
                 <form action="mailto:thaemillytata73365@gmail.com" method="post" enctype="text/plain">
                     <input type="email" name="email" id="mail" placeholder="Envie seu Email">
@@ -38,10 +39,14 @@
     </div>
 
     <section class="background-color-Sobre">
-        <h2 id="Sobre-Mim">Sobre-Mim</h2>
+
+        <h2 id="Sobre-Mim" style="visibility: hidden;">Sobre Mim</h2>
         <div class="main-sobre">
             <img src="emizzitita.jpg"width="320" height="205"/>
             <div class="Text-sobre">
+                <ul class="cabeçalho-link">
+                    <button onclick="location.href='#Inicio'">Inicio</button>
+                </ul>
                 <h2>Sobre-Mim</h2>
                 <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
