--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,10 +14,11 @@
 <body>
 
     <div class="background">
+        <h2 id="Inicio" style="visibility: hidden;">Inicio</h2>
         <nav>
             <h2 class="logo">thae<span>milly</span></h2>
             <ul class="cabeçalho-link">
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicío</a></li>
                 <button onclick="location.href='#Sobre-Mim'">Sobre-Mim</button>
                 <button onclick="location.href='#Projetos'">Projetos</button>
                 <button onclick="location.href='#Contato'">Contato</button>
@@ -27,7 +28,7 @@
         <div class="Main">
             <h4>Ola, meu nome é</h4>
             <h1>Thaemilly<span>Oliveira</span></h1>
-            <h3>Eu sou uma (nao sei oq sou)</h3>
+            <h3>Eu sou uma diva (nao sei oq sou)</h3>
             <div class="Container-btn">
                 <form action="mailto:thaemillytata73365@gmail.com" method="post" enctype="text/plain">
                     <input type="email" name="email" id="mail" placeholder="Envie seu Email">
@@ -38,10 +39,14 @@
     </div>
 
     <section class="background-color-Sobre">
+        <h2 id="Sobre-Mim">Sobre-Mim</h2>
         <div class="main-sobre">
             <img src="emizzitita.jpg"width="320" height="205"/>
-            <div class="Text-sobre">
-                <h2 id="Sobre-Mim">Sobre-Mim</h2>
+            <ul class="inicio direita">
+                <button onclick="location.href='#Inicio'">Inicío</button>
+            </ul>
+            <div class="Text-sobre">                
+                <h2>Sobre-Mim</h2>
                 <h5>(oq eu sou)<span>& "outra coisa ki eu sou</span></h5>
                 <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
@@ -89,9 +94,19 @@
         </div>
     </div>    
 
-    <div class="me-contate">
-            <button type="button">Enviar mensagem</button>
-                </div>
+<section id="Contato" class="background-color-Contato">
+    <div class="main-contato">
+        <div class="Text-contato">
+            <h3>Entre em contato comigo</h3>
+            <p>Se você tem alguma pergunta ou deseja discutir um projeto, sinta-se à vontade para entrar em contato comigo.</p>
+            <ul class="lista-contato">
+                <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
+                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
 
             <footer>
                 <div class="Redes-sociais">
