--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
 
     <section class="background-color-Sobre">
+        <ul class="inicio direita">
+            <button onclick="location.href='#Inicio'">Inicio</button>
+        </ul>        
         <h2 id="Sobre-Mim">Sobre-Mim</h2>
         <div class="main-sobre">
             <img src="emizzitita.jpg"width="320" height="205"/>
