--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </div>
     </div>
 
-    <section class="background-color-Sobre">
+    <section class="background-color-Sobre">   
         <ul class="inicio direita">
             <button onclick="location.href='#Inicio'">Inicio</button>
-        </ul>        
+        </ul>     
         <h2 id="Sobre-Mim">Sobre-Mim</h2>
         <div class="main-sobre">
             <img src="emizzitita.jpg"width="320" height="205"/>
@@ -56,6 +56,9 @@
     </section>
 
     <div class="Container-serviços">
+        <ul class="inicio direita">
+            <button onclick="location.href='#Inicio'">Inicio</button>
+        </ul>
         <div class="title">
             <h2 id="Projetos">Projetos</h2>
         </div>
@@ -95,6 +98,9 @@
     </div>    
 
 <section id="Contato" class="background-color-Contato">
+    <ul class="inicio direita">
+        <button onclick="location.href='#Inicio'">Inicio</button>
+    </ul>
     <div class="main-contato">
         <div class="Text-contato">
             <h3>Entre em contato comigo</h3>
@@ -103,6 +109,8 @@
                 <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
                 <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
             </ul>
+            <br>
+            <button type="button" onclick="location.href='form.html'">Entre em contato</button>
         </div>
     </div>
 </section>
