--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                 <button onclick="location.href='#Projetos'">Projetos</button>
                 <button onclick="location.href='#Contato'">Contato</button>
             </ul>
+
         </nav>
+        <div class="rei">
+            <img src="reifullbody (1).png"width="800" height="600"/>
+        </div>
 
         <div class="Main">
             <h4>Ola, meu nome é</h4>
