--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </nav>
         <div class="rei">
-            <img src="reifullbody.png"width="400" height="500"/>
+            <img src="reiz.png"width="400" height="500"/>
         </div>
 
         <div class="Main">
