--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Inicío</a></li>
                 <button onclick="location.href='#Sobre-Mim'">Sobre-Mim</button>
                 <button onclick="location.href='#Projetos'">Projetos</button>
-                <button onclick="location.href='#Contato'">Contato</button>
+                <button onclick="location.href='form.html'">Contato</button>
             </ul>
 
         </nav>
@@ -46,7 +46,7 @@
         <ul class="inicio direita">
             <button onclick="location.href='#Inicio'">Inicio</button>
         </ul>     
-        <h2 id="Sobre-Mim">Sobre-Mim</h2>
+        <h2 id="Sobre-Mim"></h2>
         <div class="main-sobre">
             <img src="emizzitita.jpg"width="320" height="205"/>
             <div class="Text-sobre">
@@ -100,33 +100,6 @@
             </div>
         </div>
     </div>    
-
-<section id="Contato" class="background-color-Contato">
-    <ul class="inicio direita">
-        <button onclick="location.href='#Inicio'">Inicio</button>
-    </ul>
-    <div class="main-contato">
-        <div class="Text-contato">
-            <h3>Entre em contato comigo</h3>
-            <p>Se você tem alguma pergunta ou deseja discutir um projeto, sinta-se à vontade para entrar em contato comigo.</p>
-            <ul class="lista-contato">
-                <li><i class="fas fa-envelope"></i> Email: thaemillytata73365@gmail.com</li>
-                <li><i class="fas fa-phone"></i> Telefone: (99) 99196-4728</li>
-            </ul>
-            <br>
-            <button type="button" onclick="location.href='form.html'">Entre em contato</button>
-        </div>
-    </div>
-</section>
-
-
-            <footer>
-                <div class="Redes-sociais">
-                    <a href="https://www.facebook.com/thaem1lly"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/thaemiillly/"><i class="fab fa-instagram"></i></a>
-                </div>
-            </footer>
-            
-                
+  
         </body>
         </html>
