--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </nav>
         <div class="rei">
-            <img src="reiz.png"width="400" height="500"/>
+            <img src="eva001.png"width="550" height="500"/>
         </div>
 
         <div class="Main">
@@ -48,11 +48,11 @@
         </ul>     
         <h2 id="Sobre-Mim"></h2>
         <div class="main-sobre">
-            <img src="emizzitita.jpg"width="320" height="205"/>
+            <img src="thaemilly.jpg"width="320" height="205"/>
             <div class="Text-sobre">
                 <h2 id="Sobre-Mim">Sobre-Mim</h2>
                 <h5>Thaemilly<span>Oliveira</span></h5>
-                <p>Meu nome é Thaemilly. Tenho 16 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
+                <p>Meu nome é Thaemilly. Tenho 17 anos e sou apaixonada por música e filmes de terror. Minha cantora preferida é Mitski, cuja arte me inspira.
                 </p>
                 <button type="button">Vamos conversar</button>
             </div>
@@ -84,7 +84,7 @@
                 <h5>Site anime</h5>
                 <div class="Paragrafo-button">
                     <p>Um site com imagens e videos de anime </p>
-                    <a href="siteanimes.html">
+                    <a href="sitean.html">
                         <button type="button">Ver mais</button>
                     </a>
                 </div>
