--- a/sitean.html
+++ b/sitean.html
@@ -8,11 +8,13 @@
     <title>Galeria Anime</title>
 </head>
 <body>
-
+    
     <div class="galeria">
         <div class="single-galeria wg2 hg2">
             <div class="img">
-                <img src="tommie.png" alt="">
+                <a href="https://youtu.be/0N2Nn-42oGQ?si=_AXuGRwgTN_sCs-b" target="_blank">
+                    <img src="tommie.png" alt="">
+                </a>
             </div>
 
             <div class="overflow"></div>
@@ -24,7 +26,9 @@
         </div>
         <div class="single-galeria wg2">
             <div class="img">
-                <img src="evarobo.png" alt="">
+                <a href="https://youtu.be/fShlVhCfHig?si=CSiucy-CEhudGue2" target="_blank">
+                    <img src="evarobo.png" alt="">
+                </a>
             </div>
 
             <div class="overflow"></div>
@@ -36,10 +40,9 @@
         </div>
         <div class="single-galeria">
             <div class="img">
-                <img src="parasyte (1).png" alt="">
-                <video controls>
-                    <source src="Parasyte_ The Maxim - Opening [4K 60FPS _ Creditless _ CC].mp4" type="video/mp4">
-                </video>
+                <a href="https://youtu.be/hdpHyrneZgo?si=MbwJr9JzdaMoalCZ" target="_blank">
+                    <img src="parasyte (1).png" alt="">
+                </a>
             </div>
 
             <div class="overflow"></div>
@@ -51,7 +54,9 @@
         </div>
         <div class="single-galeria">
             <div class="img">
-                <img src="jolyne.png" alt="">
+                <a href="https://youtu.be/pYExCthgZ38?si=z5--KMlbpEM5Ghv-" target="_blank">
+                    <img src="jolyne.png" alt="">
+                </a>
             </div>
 
             <div class="overflow"></div>
