--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
                 <li><a href="#">Inicío</a></li>
                 <button onclick="location.href='#Sobre-Mim'">Sobre-Mim</button>
                 <button onclick="location.href='#Projetos'">Projetos</button>
-                <button onclick="location.href='form.html'">Contato</button>
+                <button onclick="location.href='formis.html'">Contato</button>
             </ul>
 
         </nav>
-        <div class="rei">
-            <img src="eva001.png"width="550" height="500"/>
-        </div>
 
         <div class="Main">
             <h4>Ola, meu nome é</h4>
