--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 
             <div class="Card">
                 <i class="fa-solid fa-question"></i>
-                <h5>Em desenvolvimento...</h5>
+                <h5>Loja virtual</h5>
                 <div class="Paragrafo-button">
                     <p>... </p>
-                    <button type="button">Ler Mais</button>
+                    <a href="https://myuhuri.github.io/loja-virtual/index.html"></a>
+                        <button type="button">Ler Mais</button>
                 </div>
             </div>
         </div>
