--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
                 <h5>Loja virtual</h5>
                 <div class="Paragrafo-button">
                     <p>... </p>
-                    <a href="https://myuhuri.github.io/loja-virtual/index.html"></a>
-                        <button type="button">Ler Mais</button>
+                    <a href="https://myuhuri.github.io/loja-virtual/index.html">
+                        <button type="button">Ver Mais</button>
+                    </a>
                 </div>
             </div>
         </div>
